test/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: headers-ingress
  namespace: tedy
spec:
  rules:
    - host: headers.stoicatedy.ovh
      http:
        paths:
          - path: /
            backend:
              serviceName: headers-service
              servicePort: 8080
