test/service.yml
apiVersion: v1
kind: Service
metadata:
  name: headers-service
  namespace: nastasa
spec:
  selector:
    app: headers
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
